# ColoredCal

./: .gitignore  Cargo.toml  README.md  coloured_cal.sh
src/: calendar.rs  main.rs
