[package]
name = "colored-cal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Enhanced calendar with weekend coloring and weekday-only option"
license = "MIT OR Apache-2.0"

[[bin]]
name = "colored-cal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"