[package]
name = "ccal"
version = "0.1.1"
edition = "2021"
authors = ["Stephen Yu <s.yu@less3.com>"]
description = "Enhanced calendar with weekend coloring and weekday-only option"
repository = "https://github.com/stephenyu/ColoredCal"
homepage = "https://github.com/stephenyu/ColoredCal"
license = "MIT"
keywords = ["calendar", "cli", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "ccal"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
